--- a/style.css
+++ b/style.css
@@ -1056,5 +1056,5 @@ pre:after {
 
 /* zoom-image */
 .medium-zoom-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.75) !important;
 }
